force-app/main/default/objects/Platform_Country_Mapping__mdt/Platform_Country_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>A mapping for the platform and country fields to prevent users from selecting the wrong country for a platform.</description>
    <label>Platform Country Mapping</label>
    <pluralLabel>Platform Country Mappings</pluralLabel>
</CustomObject>