force-app/main/default/objects/Platform_Country_Mapping__mdt/fields/Countries__c.field-meta.xml
<CustomField>
    <fullName>Countries__c</fullName>
    <description>Countries for the platform</description>
    <label>Countries</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>