force-app/main/default/objects/Platform_Country_Mapping__mdt/fields/Profiles_to_skip_validation__c.field-meta.xml
<CustomField>
    <fullName>Profiles_to_skip_validation__c</fullName>
    <defaultValue>&apos;System Administrator, Global Salesforce Team&apos;</defaultValue>
    <description>Comma separated profiles to skip validation</description>
    <label>Profiles to skip validation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>