force-app/main/default/objects/Platform_Country_Mapping__mdt/fields/User_Role_Prefix__c.field-meta.xml
<CustomField>
    <fullName>User_Role_Prefix__c</fullName>
    <label>User Role Prefix</label>
    <length>200</length>
    <type>Text</type>
</CustomField>